# RAG-Evaluator

./: .gitignore  README.md  pyproject.toml  testing.py
configs/: datasets.yaml
examples/: chunks.jsonl  eval_samples.jsonl  experiment.yaml
src/rag_evaluator/: __init__.py  cli.py  config.py  io.py  runner.py  schemas.py
src/rag_evaluator/application/: __init__.py  experiment_inputs.py  experiment_service.py  llm_overrides.py  synthetic_service.py  types.py
src/rag_evaluator/commands/: __init__.py  chunk_commands.py  dashboard_commands.py  dataset_commands.py  experiment_commands.py  handlers.py  index_commands.py  main.py  parser.py  renderers.py  schema.py  (+2 more)
tests/: conftest.py  test_app_services.py  test_chunkers_fixed.py  test_chunkers_late.py  test_chunkers_semantic.py  test_chunkers_sentence.py  test_cli.py  test_config.py  test_dashboard_commands.py  test_dashboard_data.py  test_dashboard_queries.py  test_dataset_catalog.py  test_dataset_loader.py  test_dataset_readiness_script.py  test_dataset_sampling.py  test_embedders_factory.py  test_experiment_commands.py  test_failure_classification_question_types.py  test_generation_chat_completion.py  test_index_commands.py  test_io.py  test_normalizer_conala.py  test_normalizer_hotpot_qa.py  test_normalizer_natural_questions.py  test_normalizer_squad_v2.py  test_orchestration.py  test_persistence_serializer.py  test_reranking_factory.py  test_reranking_runtime.py  test_retrieval_bm25.py  test_retrieval_hybrid.py  test_retrieval_metrics.py  test_retrieval_vector.py  test_runner_question_types.py  test_runtime_generator.py  test_schemas.py  test_scoring_commands.py  test_scoring_failures.py  test_scoring_generation.py  test_scoring_judge_factory.py  (+11 more)
(+151 files in other folders)
