[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-evaluator"
version = "0.1.0"
description = "A config-driven framework for evaluating RAG retrieval quality, generation faithfulness, hallucination rate, cost, and latency."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["rag", "evaluation", "openrouter", "llm", "retrieval"]
dependencies = [
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0.1,<7.0",
    "python-dotenv>=1.0.1,<2.0",
    "requests>=2.32,<3.0",
    "duckdb>=1.0.0,<2.0",
    "streamlit>=1.36.0,<2.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.5.0,<1.0",
    "mypy>=1.10,<2.0",
]
retrieval = [
    "sentence-transformers>=3.0.0,<4.0",
    "rank-bm25>=0.2.2,<1.0",
    "chromadb>=0.5.0,<1.0",
]
llm = [
    "openai>=1.35.0,<2.0",
    "cohere>=5.6.0,<6.0",
]
datasets = [
    "datasets>=5.0.0,<6.0",
    "pdfplumber>=0.11.0,<1.0",
]
all = [
    "sentence-transformers>=3.0.0,<4.0",
    "rank-bm25>=0.2.2,<1.0",
    "chromadb>=0.5.0,<1.0",
    "requests>=2.32,<3.0",
    "openai>=1.35.0,<2.0",
    "cohere>=5.6.0,<6.0",
    "datasets>=5.0.0,<6.0",
    "pdfplumber>=0.11.0,<1.0",
    "python-dotenv>=1.0.1,<2.0",
]

[project.scripts]
rag-evaluator = "rag_evaluator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["rag_evaluator"]
